--- a/vector-role/tasks/main.yml
+++ b/vector-role/tasks/main.yml
@@ -4,7 +4,7 @@
   ansible.builtin.get_url:
     url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{
         vector_version }}-x86_64-unknown-linux-gnu.tar.gz"
-    dest: "./vector-{{ vector_version }}-x86_64-unknown-linux-gnu.tar.gz"
+    dest: "/tmp/vector-{{ vector_version }}-x86_64-unknown-linux-gnu.tar.gz"
     mode: 0755
     timeout: 90
     force: true
@@ -18,7 +18,7 @@
 - name: Extract Vector
   ansible.builtin.unarchive:
     copy: false
-    src: "/vector-{{ vector_version }}-x86_64-unknown-linux-gnu.tar.gz"
+    src: "/tmp/vector-{{ vector_version }}-x86_64-unknown-linux-gnu.tar.gz"
     dest: "{{ vector_dir }}"
     extra_opts: [--strip-components=2]
     creates: "{{ vector_dir }}/bin/vector"
